adding media query

--- a/test_clone/final/hbnb-flex.html
+++ b/test_clone/final/hbnb-flex.html
@@ -2,79 +2,57 @@
 <html lang="en">
 
 <head>
-    <!-- HEAD -->
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
     <title>Holberton AirBnB</title>
-
-    <!-- ********************** FAVICON
-	  -->
     <link rel="shortcut icon" href="images/icon.png">
-
-    <!-- ********************** CSS styles
-	  -->
-    <link rel="stylesheet" href="styles.css">
-
-
-    <!-- Font Awesome -->
-    <link rel="stylesheet" href="styles/font-awesome.css">
+    <link rel="stylesheet" href="styles/4-common.css">
+    <link rel="stylesheet" href="styles/3-header.css">
+    <link rel="stylesheet" href="styles/3-footer.css">
+    <link rel="stylesheet" href="styles/6-filters.css">
+    <link rel="stylesheet" href="styles/100-places.css">
 </head>
-<!-- BODY -->
 
 <body>
-    <!-- ********************** HEADER
-	  -->
-    <header aria-label="header with hbnb logo">
+    <header>
     </header>
     <main>
         <div class="container">
-            <!-- ********************** FILTERS
-		  -->
             <section class="filters">
-                <!-- ********************** LOCATIONS
-			-->
-                <div class="locations" tabindex="0">
+                <div class="locations">
                     <h3>States</h3>
                     <h4>Lorem ipsum dolor</h4>
-                    <ul class="popover" tabindex="0">
+                    <ul class="popover">
                         <li>
-                            <h2>California</h2>
+                            <h2>Arizona:</h2>
                             <ul>
-                                <li>Pacifica</li>
-                                <li>San Diego</li>
+                                <li>Phoenix</li>
+                                <li>Tucson</li>
                             </ul>
                         </li>
                         <li>
-                            <h2>Illinois</h2>
+                            <h2>California:</h2>
                             <ul>
-                                <li>Chicago</li>
-                                <li>Winnetka</li>
+                                <li>San Francisco</li>
+                                <li>Los Altos</li>
                             </ul>
                         </li>
                     </ul>
                 </div>
-                <!-- ********************** AMENITIES
-			-->
-                <div class="amenities" tabindex="0">
+                <div class="amenities">
                     <h3>Amenities</h3>
-                    <h4>adipiscing elit</h4>
-                    <ul class="popover" tabindex="0">
-                        <li>Pool</li>
-                        <li>Wifi</li>
-                        <li>Breakfast</li>
-                        <li>Garage</li>
+                    <h4>Kitchen, Internet...</h4>
+                    <ul class="popover">
+                        <li>Kitchen</li>
+                        <li>Internet</li>
+                        <li>TV</li>
+                        <li>Mini-bar</li>
                     </ul>
                 </div>
-                <!-- ********************** SEARCH BUTTON
-			-->
                 <button>Search</button>
             </section>
-            <!-- ********************** PLACES
-		  -->
-            <section class="places" tabindex="0">
+            <section class="places">
                 <h1>Places</h1>
-                <!-- ********************** place: flatland
-			-->
                 <article>
                     <div class="title">
                         <h2>Flatland</h2>
@@ -82,7 +60,7 @@
                             $80
                         </div>
                     </div>
-                    <div class="information" tabindex="0">
+                    <div class="information">
                         <div class="max_guest">
                             <i class="fa fa-users fa-3x fa-fw" aria-hidden="true"></i>
                             <br /> 5 Guests
@@ -96,17 +74,13 @@
                             <br /> 1 Bathroom
                         </div>
                     </div>
-                    <!-- ********************** USER
-			  -->
                     <div class="user">
                         <strong>Owner:</strong>
                     </div>
-                    <div class="description" tabindex="0">
+                    <div class="description">
                         I wandered lonely as a cloud That floats on high o'er vales and hills, When all at once I saw a crowd, A host, of golden daffodils; Beside the lake, beneath the trees, Fluttering and dancing in the breeze.
                     </div>
-                    <!-- ********************** AMENITIES
-			  -->
-                    <div class="amenities" tabindex="0">
+                    <div class="amenities">
                         <h2>Amenities</h2>
                         <ul>
                             <li><i class="fa fa-television fa-lg fa-fw" aria-hidden="true"></i> TV
@@ -119,9 +93,7 @@
                             <li><i class="fa fa-lock fa-lg fa-fw" aria-hidden="true"></i> Private Entrance</li>
                         </ul>
                     </div>
-                    <!-- ********************** REVIEWS
-			  -->
-                    <div class="reviews" tabindex="0">
+                    <div class="reviews">
                         <h2>Reviews</h2>
                         <ul>
                             <li>
@@ -138,16 +110,14 @@
                         </ul>
                     </div>
                 </article>
-                <!-- ********************** place: closet
-			-->
                 <article>
                     <div class="title">
                         <h2>Closet</h2>
                         <div class="price_by_night">
-                            $7
+                            $99
                         </div>
                     </div>
-                    <div class="information" tabindex="0">
+                    <div class="information">
                         <div class="max_guest">
                             <i class="fa fa-users fa-3x fa-fw" aria-hidden="true"></i>
                             <br /> 2 Guests
@@ -161,17 +131,13 @@
                             <br /> 1 Bathroom
                         </div>
                     </div>
-                    <!-- ********************** USER
-			  -->
                     <div class="user">
                         <strong>Owner:</strong>
                     </div>
-                    <div class="description" tabindex="0">
+                    <div class="description">
                         Continuous as the stars that shine And twinkle on the milky way, They stretched in never-ending line Along the margin of a bay: Ten thousand saw I at a glance, Tossing their heads in sprightly dance.
                     </div>
-                    <!-- ********************** AMENITIES
-			  -->
-                    <div class="amenities" tabindex="0">
+                    <div class="amenities">
                         <h2>Amenities</h2>
                         <ul>
                             <li><i class="fa fa-television fa-lg fa-fw" aria-hidden="true"></i> TV
@@ -182,9 +148,7 @@
                             </li>
                         </ul>
                     </div>
-                    <!-- ********************** REVIEWS
-			  -->
-                    <div class="reviews" tabindex="0">
+                    <div class="reviews">
                         <h2>Reviews</h2>
                         <ul>
                             <li>
@@ -200,16 +164,14 @@
                         </ul>
                     </div>
                 </article>
-                <!-- ********************** place: big home
-			-->
                 <article>
                     <div class="title">
                         <h2>Big Home</h2>
                         <div class="price_by_night">
-                            $9
+                            $99
                         </div>
                     </div>
-                    <div class="information" tabindex="0">
+                    <div class="information">
                         <div class="max_guest">
                             <i class="fa fa-users fa-3x fa-fw" aria-hidden="true"></i>
                             <br /> 20 Guests
@@ -223,18 +185,14 @@
                             <br /> 1 Bathroom
                         </div>
                     </div>
-                    <!-- ********************** USER
-			  -->
                     <div class="user">
                         <strong>Owner:</strong>
                     </div>
-                    <div class="description" tabindex="0">
+                    <div class="description">
                         The waves beside them danced; but they Out-did the sparkling waves in glee: A poet could not but be gay, In such a jocund company: I gazed—and gazed—but little thought What wealth the show to me had brought: For oft, when on my couch I lie In vacant or
                         in pensive mood, They flash upon that inward eye Which is the bliss of solitude; And then my heart with pleasure fills, And dances with the daffodils.
                     </div>
-                    <!-- ********************** AMENITIES
-			  -->
-                    <div class="amenities" tabindex="0">
+                    <div class="amenities">
                         <h2>Amenities</h2>
                         <ul>
                             <li><i class="fa fa-television fa-lg fa-fw" aria-hidden="true"></i> TV
@@ -247,9 +205,7 @@
                             <li><i class="fa fa-lock fa-lg fa-fw" aria-hidden="true"></i> Private Entrance</li>
                         </ul>
                     </div>
-                    <!-- ********************** REVIEWS
-			  -->
-                    <div class="reviews" tabindex="0">
+                    <div class="reviews">
                         <h2>Reviews</h2>
                         <ul>
                             <li>
@@ -266,7 +222,6 @@
             </section>
         </div>
     </main>
-    <!-- FOOTER -->
     <footer>
         Holberton School
     </footer>
