--- a/test_clone/8-index.html
+++ b/test_clone/8-index.html
@@ -2,97 +2,155 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HBNB Clone</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <title>Holberton AirBnB</title>
+    <link rel="shortcut icon" href="images/icon.png">
     <link rel="stylesheet" href="styles/4-common.css">
-    <link rel="stylesheet" href="styles/3-footer.css">
     <link rel="stylesheet" href="styles/3-header.css">
+    <link rel="stylesheet" href="styles/3-footer.css">
     <link rel="stylesheet" href="styles/6-filters.css">
     <link rel="stylesheet" href="styles/8-places.css">
-    <link rel="icon" href="images/icon.png">
+
 </head>
 
 <body>
+
     <header>
-        <div class="logo"></div>
     </header>
-    <div class="container">
-        <section class="filters">
-            <button type="button">Search</button>
-            <div class="locations">
-                <h3 class="h3-search">States</h3>
-                <h4 class="h4-search">California, Arizona...</h4>
-                <div class="popover">
-                    <ul>
-                        <li class="list-content">
-                            <h2 class="subtitle-states">Arizona:</h2>
-                            <ul class="subtitle-cities">
-                                <li>Phoenix</li>
-                                <li>Tucson</li>
+    <main>
+        <div class="container">
+
+            <section class="filters">
+
+                <div class="locations">
+                    <h3>States</h3>
+                    <h4>Lorem ipsum dolor</h4>
+                    <ul class="popover">
+                        <li>
+                            <h2>California</h2>
+                            <ul>
+                                <li>Pacifica</li>
+                                <li>San Diego</li>
                             </ul>
                         </li>
-                        <li class="list-content">
-                            <h2 class="subtitle-states">California:</h2>
-                            <ul class="subtitle-cities">
-                                <li>San Francisco</li>
-                                <li>Los Altos</li>
+                        <li>
+                            <h2>Illinois</h2>
+                            <ul>
+                                <li>Chicago</li>
+                                <li>Winnetka</li>
                             </ul>
                         </li>
                     </ul>
                 </div>
-            </div>
-            <div class="amenities">
-                <h3 class="h3-search">Amenities</h3>
-                <h4 class="h4-search">Internet, Kitchen...</h4>
-                <div class="popover">
-                    <ul class="subtitle-amenities">
-                        <li>Internet</li>
-                        <li>TV</li>
-                        <li>Kitchen</li>
-                        <li>Iron</li>
+
+                <div class="amenities">
+                    <h3>Amenities</h3>
+                    <h4>adipiscing elit</h4>
+                    <ul class="popover">
+                        <li>Pool</li>
+                        <li>Wifi</li>
+                        <li>Breakfast</li>
+                        <li>Garage</li>
                     </ul>
                 </div>
-            </div>
-        </section>
-        <section class="places">
-            <div>
+
+                <button>Search</button>
+            </section>
+
+            <section class="places">
                 <h1>Places</h1>
-            </div>
-            <article class="card">
-                <div class="card-top">
-                    <div class="place-name">
-                        <h2>My home</h2>
-                    </div>
-                    <div class="price_by_night">
-                        <span class="price">$80</span>
+                <article>
+
+                    <div class="title">
+                        <h2>Flatland</h2>
+                        <div class="price_by_night">
+                            $80
+                        </div>
                     </div>
                     <div class="information">
-                        <div class="max_guests">
-                            <div class="icon icon-guests"></div>
-                            <p>2 Guests</p>
+                        <div class="max_guest">
+                            <i class="fa fa-users fa-3x" aria-hidden="true"></i>
+                            <br /> 5 Guests
                         </div>
                         <div class="number_rooms">
-                            <div class="icon icon-rooms"></div>
-                            <p>2 Guests</p>
+                            <i class="fa fa-bed fa-3x" aria-hidden="true"></i>
+                            <br /> 4 Bedrooms
                         </div>
                         <div class="number_bathrooms">
-                            <div class="icon icon-bathrooms"></div>
-                            <p>2 Guests</p>
+                            <i class="fa fa-bath fa-3x" aria-hidden="true"></i>
+                            <br /> 1 Bathroom
                         </div>
                     </div>
-                </div>
-            </article>
-            <article class="card">
-                <h2>Tiny house</h2>
-            </article>
-            <article class="card">
-                <h2>A suite</h2>
-            </article>
-        </section>
-    </div>
+                    <div class="user">
+                        <strong>Owner:</strong>
+                    </div>
+                    <div class="description">
+                        I wandered lonely as a cloud That floats on high o'er vales and hills, When all at once I saw a crowd, A host, of golden daffodils; Beside the lake, beneath the trees, Fluttering and dancing in the breeze.
+                    </div>
+                </article>
+                <article>
+                    <div class="title">
+                        <h2>Closet</h2>
+                        <div class="price_by_night">
+                            $7
+                        </div>
+                    </div>
+                    <div class="information">
+                        <div class="max_guest">
+                            <i class="fa fa-users fa-3x" aria-hidden="true"></i>
+                            <br /> 2 Guests
+                        </div>
+                        <div class="number_rooms">
+                            <i class="fa fa-bed fa-3x" aria-hidden="true"></i>
+                            <br /> 2 Bedrooms
+                        </div>
+                        <div class="number_bathrooms">
+                            <i class="fa fa-bath fa-3x" aria-hidden="true"></i>
+                            <br /> 1 Bathroom
+                        </div>
+                    </div>
+                    <div class="user">
+                        <strong>Owner:</strong>
+                    </div>
+                    <div class="description">
+                        Continuous as the stars that shine And twinkle on the milky way, They stretched in never-ending line Along the margin of a bay: Ten thousand saw I at a glance, Tossing their heads in sprightly dance.
+                    </div>
+                </article>
+                <article>
+                    <div class="title">
+                        <h2>Big Home</h2>
+                        <div class="price_by_night">
+                            $99
+                        </div>
+                    </div>
+                    <div class="information">
+                        <div class="max_guest">
+                            <i class="fa fa-users fa-3x" aria-hidden="true"></i>
+                            <br /> 20 Guests
+                        </div>
+                        <div class="number_rooms">
+                            <i class="fa fa-bed fa-3x" aria-hidden="true"></i>
+                            <br /> 4 Bedrooms
+                        </div>
+                        <div class="number_bathrooms">
+                            <i class="fa fa-bath fa-3x" aria-hidden="true"></i>
+                            <br /> 1 Bathroom
+                        </div>
+                    </div>
+                    <div class="user">
+                        <strong>Owner:</strong>
+                    </div>
+                    <div class="description">
+                        The waves beside them danced; but they Out-did the sparkling waves in glee: A poet could not but be gay, In such a jocund company: I gazed—and gazed—but little thought What wealth the show to me had brought: For oft, when on my couch I lie In vacant or
+                        in pensive mood, They flash upon that inward eye Which is the bliss of solitude; And then my heart with pleasure fills, And dances with the daffodils.
+                    </div>
+                </article>
+            </section>
+        </div>
+    </main>
     <footer>
-        <p>Holberton School</p>
+        Holberton School
     </footer>
 </body>
 
