--- a/webapp4e/index.html
+++ b/webapp4e/index.html
@@ -18,6 +18,9 @@
         <li><a href="#">2</a></li>
         <li><a href="#">3</a></li>
     </ul>
+    <?php 
+        print "Hello"; 
+    ?>
 </body>
 
 </html>
