--- a/Tailwind/index.html
+++ b/Tailwind/index.html
@@ -4,11 +4,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
+    <title>Tailwind Test</title>
 </head>
 
 <body>
+    <button class="bg-green-200 hover:bg-red-700 text-white font-bold py-2 px-2">Fonziberto</button>
 
+    <div class="container mx-auto flex column-3">
+        <div class="m-5 p-5 pr-10 border rounded bg-blue-100">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt quae consequatur consequuntur iusto quam laborum nemo cum voluptatum ab vero?</p>
+        </div>
+    </div>
 </body>
 
 </html>
