final update for today; fixed fonts and shadow on images catalog

--- a/Caribe/caribe_v2/index.html
+++ b/Caribe/caribe_v2/index.html
@@ -15,6 +15,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@1,500&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,300;1,500&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
 
 </head>
@@ -27,10 +29,10 @@
             <a href="#"></a>
         </div>
         <nav>
-            <li><a class="hover hover-3" href="#Nosotros">Nosotros</a></li>
-            <li><a class="hover hover-3" href="#Catalogo">Catalogo</a></li>
-            <li><a class="hover hover-3" href="#Servicios">Servicios</a></li>
-            <li><a class="hover hover-3" href="#Contacto">Contacto</a></li>
+            <li><a href="#Nosotros">Nosotros</a></li>
+            <li><a href="#Catalogo">Catalogo</a></li>
+            <li><a href="#Servicios">Servicios</a></li>
+            <li><a href="#Contacto">Contacto</a></li>
         </nav>
     </header>
 
@@ -152,7 +154,6 @@
             <li><a href="https://www.facebook.com/caribemarmolcol" target="_blank"><i class="icon fa fa-facebook-square fa"></i></a></li>
             <li><a href="https://www.instagram.com/caribemarmolcol/" target="_blank"><i class="icon fab fa-instagram fa"></i></a></li>
         </ul>
-        <p>&#169;CaribeMarmol</p>
     </footer>
 
 </body>
