--- a/Caribe/index_test.html
+++ b/Caribe/index_test.html
@@ -29,7 +29,7 @@
 
     <section class="hero">
         <div class="background-image" style="background-image: url(img/hero2.jpg);"></div>
-        <h1>INNOVACION</h1>
+        <h1>Galería de Marmol</h1>
         <h3>La cocina de tus sueños a tu alcance.</h3>
         <a href="https://api.whatsapp.com/send?phone=573226271906" class="btn"><i class="fab fa-whatsapp fa-lg"></i><spam class="btn-text">Escribenos</spam></a>
     </section>
@@ -40,57 +40,38 @@
             resultados posibles. </p>
         <hr class="hr-1">
         <ul class="grid">
-            <li class="small" style="background-image: url(img/cocina1.jpg);"></li>
-            <li class="large" style="background-image: url(img/cocina2.jpg);"></li>
-            <li class="large" style="background-image: url(img/cocina5.jpg);"></li>
+            <li class="small" style="background-image: url(img/cocina1.png);"></li>
+            <li class="large" style="background-image: url(img/cocina_7.jpg);"></li>
+            <li class="large" style="background-image: url(img/cocina_6.jpg);"></li>
             <li class="small" style="background-image: url(img/cocina4.jpg);"></li>
             <!--    <li class="small" style="background-image: url(img/cocina3.jpg);"></li>
             <li class="large" style="background-image: url(img/cocina6.jpg);"></li> -->
         </ul>
 
-        <!-- Photo Grid -->
-        <div class="row">
-            <div class="column">
-                <img src="img/cocina1.png" style="width:100%">
-                <img src="img/cocina1.png" style="width:100%">
-                <img src="img/cocina1.png" style="width:100%">
-                <img src="img/cocina1.png" style="width:100%">
-                <img src="img/cocina1.png" style="width:100%">
-                <img src="img/cocina1.png" style="width:100%">
-                <img src="img/cocina1.png" style="width:100%">
-            </div>
-            <div class="column">
-                <img src="img/cocina1.png" style="width:100%">
-                <img src="img/cocina1.png" style="width:100%">
-                <img src="img/cocina1.png" style="width:100%">
-                <img src="img/cocina1.png" style="width:100%">
-                <img src="img/cocina1.png" style="width:100%">
-                <img src="img/cocina1.png" style="width:100%">
-            </div>
-        </div>
 
 
-        <!-- slider -->
+
+        <!-- slider
         <div class="slideshow-container">
 
             <div class="mySlides fade">
                 <div class="numbertext"></div>
                 <img src="img/cocina4.jpg" style="width:100%" class="carrousel-img">
-                <div class="carrousel-text">Amarillo Pollito <br> Amarillo Pollito</div>
+                <div class="carrousel-text">Amarillo Santa Cecilia</div>
             </div>
 
             <div class="mySlides fade">
                 <div class="numbertext"></div>
                 <img src="img/cocina5.png" style="width:100%" class="carrousel-img">
-                <div class="carrousel-text">Amarillo Pollito <br> Amarillo Pollito</div>
+                <div class="carrousel-text">Blanco Himalaya</div>
             </div>
 
             <div class="mySlides fade">
                 <div class="numbertext"></div>
                 <img src="img/cocina3.jpg" style="width:100%" class="carrousel-img">
-                <div class="carrousel-text">Amarillo Pollito <br> Amarillo Pollito</div>
+                <div class="carrousel-text">Negro Brasil</div>
             </div>
-            <!--<div class="mySlides fade">
+            <div class="mySlides fade">
                 <div class="numbertext">4 / 5</div>
                 <img src="img/cocina1.png" style="width:100%" class="carrousel-img">
                 <div class="carrousel-text">Amarillo Pollito <br> Amarillo Pollito</div>
@@ -100,11 +81,11 @@
                 <img src="img/cocina5.png" style="width:100%" class="carrousel-img">
                 <div class="carrousel-text">Amarillo Pollito <br> Amarillo Pollito</div>
             </div>-->
-            <!--
+        <!--
             <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
             <a class="next" onclick="plusSlides(1)">&#10095;</a>
--->
-        </div>
+
+        </div>-->
         <br>
 
         <div style="text-align:center">
@@ -120,19 +101,20 @@
             <li>
                 <i class="fas fa-truck-pickup"></i>
                 <h4>Marmoleria</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam id felis et ipsum bibendum ultrices vitae pulvinar velit.</p>
+                <p>Fabricamos mesones de cocina, baños, escaleras y más<s class=""></s></p>
             </li>
             <li>
                 <i class="fas fa-pencil-ruler"></i>
                 <h4>Diseño</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam id felis et ipsum bibendum ultrices vitae pulvinar velit.</p>
+                <p>Realizamos la obra a la medida de tus necesidades.</p>
             </li>
             <li>
                 <i class="fas fa-tools"></i>
                 <h4>Instalación</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam id felis et ipsum bibendum ultrices vitae pulvinar velit.</p>
+                <p>Acabados finales con total lujo y elegancía.</p>
             </li>
-            </div>
+        </ul>
+        </div>
     </section>
     <!--
     <section class="reviews">
@@ -147,19 +129,7 @@
 -->
     <section class="contact" id="contact">
         <ul class="grid">
-            <!-- <li>
-                <div>
-                    <h2>Contacta con nosostros</h2>
-                    <form action="mailto:dlscoccia@gmail.com" class="formulario" method="POST">
-                        <input type="text" placeholder="Nombre" id="nombre" name="nombre" required value="">
-                        <input type="email" placeholder="Correo" id="correo" name="correo" required value="" class="email">
-                        <textarea name="mensaje" id="mensaje" placeholder="Mensaje:"></textarea>
-                        <div class="derecha">
-                            <input class="boton-form" type="submit" value="Contactar" name="submmit">
-                        </div>
-                    </form>
-                </div>
-            </li> -->
+
             <li>
                 <h2>Dirección</h2>
                 <p class="direccion">Calle 111 # 37 - 47<br>Barranquilla Colombia.<br><i class="fas fa-phone"></i> 322 627 1906 <br><i class="fas fa-envelope"></i> info@caribemarmol.com</p>
@@ -169,11 +139,11 @@
                 <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15667.026438608735!2d-74.8371581!3d10.981735!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xc3975d2085cd79f6!2sCaribeMarmol!5e0!3m2!1sen!2sco!4v1607639117199!5m2!1sen!2sco" width="450" height="325"
                     frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
             </li>
-            </div>
+        </ul>
     </section>
     <footer>
         <ul>
-            <li><a href="https://twitter.com/CaribeMarmol" target="_blank"><i class="icon fa fa-twitter-square fa-lg"></i></a></li>
+            <li><a href="https://twitter.com/caribemarmolcol" target="_blank"><i class="icon fa fa-twitter-square fa-lg"></i></a></li>
             <li><a href="https://www.facebook.com/caribemarmolcol" target="_blank"><i class="icon fa fa-facebook-square fa-lg"></i></a></li>
             <li><a href="https://www.instagram.com/caribemarmolcol/" target="_blank"><i class="icon fab fa-instagram fa-lg"></i></a></li>
             <li><a href="https://api.whatsapp.com/send?phone=573226271906"><i class="icon fab fa-whatsapp fa-lg"></i></a></li>
@@ -182,6 +152,7 @@
             </li> -->
         </ul>
         <p>&#169;CaribeMarmol</p>
+
     </footer>
 </body>
 
