Some text changes; final final modification for today

--- a/Caribe/caribe_v2/index.html
+++ b/Caribe/caribe_v2/index.html
@@ -41,7 +41,7 @@
         <div class="background-image" style="background-image: url(img/hero2.jpg);"></div>
         <h1>Galería de Mármol</h1>
         <h3>La cocina que <span class="underline--magical">sueñas</span> a tu alcance</h3>
-        <a href="https://api.whatsapp.com/send?phone=573226271906" class="btn">¡LLAMA YA!</a>
+        <a href="https://api.whatsapp.com/send?phone=573226271906" class="btn">¡Just do it!</a>
     </section>
 
 
